; ModuleID = '/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_next.c'
source_filename = "/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_mgr = type { %struct.mg_connection* }
%struct.mg_connection = type { %struct.mg_connection* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.mg_connection* @mg_next(%struct.mg_mgr* %0, %struct.mg_connection* %1) #0 {
  %3 = alloca %struct.mg_mgr*, align 8
  %4 = alloca %struct.mg_connection*, align 8
  store %struct.mg_mgr* %0, %struct.mg_mgr** %3, align 8
  store %struct.mg_connection* %1, %struct.mg_connection** %4, align 8
  %5 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %6 = icmp eq %struct.mg_connection* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load %struct.mg_mgr*, %struct.mg_mgr** %3, align 8
  %9 = getelementptr inbounds %struct.mg_mgr, %struct.mg_mgr* %8, i32 0, i32 0
  %10 = load %struct.mg_connection*, %struct.mg_connection** %9, align 8
  br label %15

11:                                               ; preds = %2
  %12 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %13 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %12, i32 0, i32 0
  %14 = load %struct.mg_connection*, %struct.mg_connection** %13, align 8
  br label %15

15:                                               ; preds = %11, %7
  %16 = phi %struct.mg_connection* [ %10, %7 ], [ %14, %11 ]
  ret %struct.mg_connection* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
